--- a/index.css
+++ b/index.css
@@ -1,9 +1,10 @@
 body{
-    background-color:paleturquoise;
+    background-color:lightcyan;
 }
 
 h1{
-    text-align: center;
+    text-align:center;
+    font-size:4em;
 }
 
 ul{
